# project-druzya

./: .dockerignore  .gitignore  AGENTS.md  README.md  go.work
.cursor/rules/: agents-md.mdc  architecture-standard.mdc  go-backend.mdc  project-overview.mdc  service-registry.mdc
.github/workflows/: ci.yml  deploy.yml  hone-release.yml
apps/hone/: .env  .env.example  .env.production  .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  SIGNING.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.web.json  tsconfig.web.tsbuildinfo  vite.config.ts  vitest.config.ts
apps/hone-legacy/: .env.example  README.md  electron-builder.yml  electron.vite.config.ts  eslint.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
apps/hone/src-tauri/: Cargo.toml  tauri.conf.json
apps/hone/src-tauri/capabilities/: default.json
apps/hone/src-tauri/icons/: icon.icns
apps/hone/src-tauri/permissions/: hone-commands.toml
apps/hone/src-tauri/src/: auth.rs  lib.rs  main.rs  store.rs  vault.rs  window_macos.rs
apps/web/: .env.example  AGENTS.md  MIGRATION.md  README.md  hone-vite-aliases.ts  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts
backend/: go.mod
deploy/: .dockerignore  .env.example  Caddyfile  Dockerfile  Dockerfile.caddy  Dockerfile.migrate  Makefile  PRODUCTION_CHECKLIST.md  PROD_PLAN.md  README.md  RUNBOOK.md  docker-compose.prod.yml  nginx-druz9.conf.example  prometheus-alerts.yml  prometheus.yml
deploy/docs/: MIGRATION_CUTOVER.md
deploy/grafana/: README.md
deploy/scripts/: backup-postgres.sh  (+17 more)
(+1553 files in other folders)
